// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Labelled Input renders correctly buttons 1`] = `
<div
  class="px-0 py-1 container-fluid"
  type="buttons"
>
  <div
    class="form-group labelled-textarea mb-0"
    role="group"
  >
    <label
      class="d-block"
      for="textarea-null"
    >
      
            Label Text 
      <br />
    </label>
    <div>
       
      <textarea
        class="form-control form-control-md"
        id="textarea-null"
        placeholder="Example Text"
        rows="2"
        wrap="soft"
      />
      <!---->
      <!---->
      <!---->
    </div>
  </div>
   
  <div
    aria-atomic="true"
    aria-live="polite"
    class="alert mt-1 alert-primary"
    placement="bottom"
    role="alert"
  >
    <!---->
     Warning Text 
  </div>
</div>
`;

exports[`Labelled Input renders correctly checkbox 1`] = `
<div
  class="px-0 py-1 container-fluid"
  type="checkbox"
>
  <div
    class="form-group labelled-textarea mb-0"
    role="group"
  >
    <label
      class="d-block"
      for="textarea-null"
    >
      
            Label Text 
      <br />
    </label>
    <div>
       
      <textarea
        class="form-control form-control-md"
        id="textarea-null"
        placeholder="Example Text"
        rows="2"
        wrap="soft"
      />
      <!---->
      <!---->
      <!---->
    </div>
  </div>
   
  <div
    aria-atomic="true"
    aria-live="polite"
    class="alert mt-1 alert-primary"
    placement="bottom"
    role="alert"
  >
    <!---->
     Warning Text 
  </div>
</div>
`;

exports[`Labelled Input renders correctly textarea 1`] = `
<div
  class="px-0 py-1 container-fluid"
>
  <div
    class="form-group labelled-textarea mb-0"
    role="group"
  >
    <label
      class="d-block"
      for="textarea-null"
    >
      
            Label Text 
      <br />
    </label>
    <div>
       
      <textarea
        class="form-control form-control-md"
        id="textarea-null"
        placeholder="Example Text"
        rows="2"
        wrap="soft"
      />
      <!---->
      <!---->
      <!---->
    </div>
  </div>
   
  <div
    aria-atomic="true"
    aria-live="polite"
    class="alert mt-1 alert-primary"
    placement="bottom"
    role="alert"
  >
    <!---->
     Warning Text 
  </div>
</div>
`;

exports[`Labelled Input renders correctly time 1`] = `
<div
  class="px-0 py-1 container-fluid"
  type="time"
>
  <div
    class="form-group labelled-textarea mb-0"
    role="group"
  >
    <label
      class="d-block"
      for="textarea-null"
    >
      
            Label Text 
      <br />
    </label>
    <div>
       
      <textarea
        class="form-control form-control-md"
        id="textarea-null"
        placeholder="Example Text"
        rows="2"
        wrap="soft"
      />
      <!---->
      <!---->
      <!---->
    </div>
  </div>
   
  <div
    aria-atomic="true"
    aria-live="polite"
    class="alert mt-1 alert-primary"
    placement="bottom"
    role="alert"
  >
    <!---->
     Warning Text 
  </div>
</div>
`;
